# boring-be

./: Cargo.toml  LICENSE  README.md
migrations/2022-05-10-080909_create_posts/: up.sql
src/: actions.rs  api.rs  app_config.rs  main.rs  models.rs
