[package]
name = "boring-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
